--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   font-family: "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -10,6 +11,37 @@ body {
 nav {
   font-size: small;
   font-weight: 100;
-  opacity: 0.5;
-  background-color: #454545;
+  opacity: 0.8;
+  background-color: transparent;
+  background-color: #2d2d2d;
+}
+
+/* main */
+/* section 1 */
+.section1 {
+  height: 650px;
+  padding: 80px;
+  background-image: url("../images/home/iphonee-16-pro-mobile.jpg");
+  background-color: black;
+  background-size: auto;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+/* section 2 */
+.section2 {
+  height: 650px;
+  background-image: url("../images/home/iphone-16-mobile.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin: 10px 0;
+}
+@media (min-width: 720px) {
+  .section1 {
+    background-image: url("../images/home/iphone-16-pro.jpg");
+    background-size: cover;
+  }
+  .section2 {
+    background-image: url("../images/home/iphone-16.jpg");
+  }
 }
