--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+img {
+  width: 100%;
+}
 body {
   font-family: "SF Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif;
@@ -17,6 +20,14 @@ nav {
 }
 
 /* main */
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+h6 {
+  font-size: 1rem;
+}
 /* section 1 */
 .section1 {
   height: 650px;
@@ -36,12 +47,43 @@ nav {
   background-repeat: no-repeat;
   margin: 10px 0;
 }
+/* section 3 */
+.section3 {
+  height: 650px;
+  background-image: url("../images/home/watch-mobile.png");
+  background-size: auto;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin: 10px 0;
+}
+.watch-logo {
+  width: 18vw;
+  margin: 0 auto;
+}
+/* section 3 */
+
 @media (min-width: 720px) {
+  h1 {
+    font-size: 3rem; /* Larger font size for md screens */
+  }
+
+  h6 {
+    font-size: 1.25rem;
+  }
+
+  p {
+    font-size: 1.2rem;
+  }
+
   .section1 {
     background-image: url("../images/home/iphone-16-pro.jpg");
     background-size: cover;
   }
   .section2 {
     background-image: url("../images/home/iphone-16.jpg");
+  }
+  .section3 {
+    background-image: url("../images/home/watch.jpg");
+    background-size: cover;
   }
 }
